2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/preinstall.am, posix/preinstall.am: Revert temporary
	changes which aid in coverage testing.

2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/cond.c, posix/src/key.c, posix/src/mqueuenametoid.c,
	posix/src/mutex.c, posix/src/pbarrier.c, posix/src/prwlock.c,
	posix/src/pspin.c, posix/src/pthread.c, posix/src/ptimer.c,
	posix/src/semaphorenametoid.c: Add option for all POSIX objects
	whether named or unnamed to have a string name.  If the API does
	not directly support having a name, then the user must explicitly
	assign it using rtems_object_set_name().
	* rtems/src/rtemsobjectgetapiclassname.c: Improved testability.
	* score/include/rtems/score/object.h,
	score/src/objectgetnameasstring.c, score/src/objectnametoidstring.c,
	score/src/objectsetname.c: Modifications required to pass testing of
	recently modified object name operations.  Also eliminated
	multiprocessing related code that was not reachable.

2008-01-31	Jennifer Averett <jennifer.averett@OARcorp.com>

	* posix/src/timersettime.c: Fix to remove warning.

2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/src/posix_memalign.c: Remove warning.

2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/object.h, score/src/objectgetinfo.c,
	rtems/include/rtems/rtems/object.h,
	rtems/src/rtemsobjectgetapiclassname.c,
	rtems/src/rtemsobjectgetclassinfo.c: class is a C++ keyword and
	cannot be used as a parameter.

2008-01-30	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/Makefile.am, score/include/rtems/score/threadq.h,
	score/inline/rtems/score/threadq.inl: _Thread_queue_Process_timeout
	was really too complex to be inlined.
	* score/src/threadqprocesstimeout.c: New file.

2008-01-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/Doxyfile: Revert Doxygen version changes.

2008-01-29	Joel Sherrill <joel.sherrill@oarcorp.com>
