@@ -1,5 +1,9 @@
 2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>
 
+	* posix/src/pthreadinitthreads.c: Clean up error paths.
+
+2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>
+
 	* libcsupport/preinstall.am, posix/preinstall.am: Revert temporary
 	changes which aid in coverage testing.
 
